--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,39 @@
  *= require_tree .
  *= require_self
  */
+
+
+ a {
+  text-align: center;
+  text-decoration: none;
+  color: blueviolet;
+  background-color: yellow;
+  padding: 20px;
+  margin: 350px;
+  font-weight: bold
+ }
+
+ .answer {
+  text-align: center;
+  padding: 200px;
+  font-weight: bold;
+  background-color: brown;
+ }
+
+ .name {
+  text-align: center;
+  text-decoration: none;
+  color: blueviolet;
+  background-color: green;
+  padding: 20px;
+  margin: 350px;
+  font-weight: bold
+
+ }
+
+ .question {
+  text-align: center;
+  padding: 200px;
+  font-weight: bold;
+  background-color: brown;
+ }
